{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 92,
  "lineage": "6bb2c3c1-7c40-ca6b-9298-11b45ada7525",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a40d917b098064ff",
            "domain": "vpc",
            "id": "eipalloc-0a40d917b098064ff",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-86-23-244.compute-1.amazonaws.com",
            "public_ip": "52.86.23.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "EIP-DADOS",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "EIP-DADOS",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:internet-gateway/igw-0311f3c9eb293f9de",
            "id": "igw-0311f3c9eb293f9de",
            "owner_id": "742364540768",
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "IGW-VPC-DADOS",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "IGW-VPC-DADOS",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "vpc_id": "vpc-07eecf7196212e4c7"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a40d917b098064ff",
            "association_id": "eipassoc-0a3da4a303194a728",
            "connectivity_type": "public",
            "id": "nat-0539bffcb21f24913",
            "network_interface_id": "eni-0cb104e36372de62c",
            "private_ip": "10.122.19.209",
            "public_ip": "52.86.23.244",
            "subnet_id": "subnet-001f5f7df3b851826",
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "NATGW-DADOS",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "NATGW-DADOS",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            }
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:route-table/rtb-067838d4b0d259b66",
            "id": "rtb-067838d4b0d259b66",
            "owner_id": "742364540768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0539bffcb21f24913",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "RTB-VPC-DADOS-PRIVATE-DB",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "RTB-VPC-DADOS-PRIVATE-DB",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-07eecf7196212e4c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:route-table/rtb-0600a2708ae9bb0de",
            "id": "rtb-0600a2708ae9bb0de",
            "owner_id": "742364540768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0539bffcb21f24913",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "RTB-VPC-DADOS-PRIVATE-APP",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "RTB-VPC-DADOS-PRIVATE-APP",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-07eecf7196212e4c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:route-table/rtb-0e49d468d091118c3",
            "id": "rtb-0e49d468d091118c3",
            "owner_id": "742364540768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0311f3c9eb293f9de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "RTB-VPC-DADOS-PUBLIC-APP",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "RTB-VPC-DADOS-PUBLIC-APP",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "timeouts": null,
            "vpc_id": "vpc-07eecf7196212e4c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "SBNT-VPC-DADOS-PRIVATE-APP-AZ1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036f42dabe8e3604b",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-083a33d813044be95"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.database",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "SBNT-VPC-DADOS-PRIVATE-APP-AZ1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0881634a82902a6fc",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-03867b9a03e0a4bc1"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.database",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "SBNT-VPC-DADOS-PRIVATE-DB-AZ1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa5703addf5b3656",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-0cdbbcefb5d3beb51"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.database",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "SBNT-VPC-DADOS-PRIVATE-DB-AZ1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081f4947aef72b888",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-02474950c5337c918"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.database",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "SBNT-VPC-DADOS-PUBLIC-APP-AZ1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06edd2eed6d66de9a",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-001f5f7df3b851826"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.database",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "SBNT-VPC-DADOS-PUBLIC-APP-AZ1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4626f23c849c2b4",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-0dae142823750a03b"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.database",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "SBNT-VPC-DADOS-PRIVATE-APP-AZ1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036f42dabe8e3604b",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-083a33d813044be95"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "SBNT-VPC-DADOS-PRIVATE-APP-AZ1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0881634a82902a6fc",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-03867b9a03e0a4bc1"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "SBNT-VPC-DADOS-PRIVATE-DB-AZ1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa5703addf5b3656",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-0cdbbcefb5d3beb51"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "SBNT-VPC-DADOS-PRIVATE-DB-AZ1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081f4947aef72b888",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-02474950c5337c918"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "SBNT-VPC-DADOS-PUBLIC-APP-AZ1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06edd2eed6d66de9a",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-001f5f7df3b851826"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "SBNT-VPC-DADOS-PUBLIC-APP-AZ1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4626f23c849c2b4",
            "route_table_id": "rtb-0e49d468d091118c3",
            "subnet_id": "subnet-0dae142823750a03b"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.this",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:subnet/subnet-0cdbbcefb5d3beb51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.122.10.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdbbcefb5d3beb51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742364540768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PRIVATE-DB-AZ1a",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PRIVATE-DB-AZ1a",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "vpc_id": "vpc-07eecf7196212e4c7"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "db_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:subnet/subnet-02474950c5337c918",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.122.12.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02474950c5337c918",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742364540768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PRIVATE-DB-AZ1b",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PRIVATE-DB-AZ1b",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "vpc_id": "vpc-07eecf7196212e4c7"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pub_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:subnet/subnet-001f5f7df3b851826",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.122.18.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001f5f7df3b851826",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742364540768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PUBLIC-APP-AZ1a",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PUBLIC-APP-AZ1a",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "vpc_id": "vpc-07eecf7196212e4c7"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pub_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:subnet/subnet-0dae142823750a03b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.122.20.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dae142823750a03b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742364540768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PUBLIC-APP-AZ1b",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PUBLIC-APP-AZ1b",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "vpc_id": "vpc-07eecf7196212e4c7"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:subnet/subnet-083a33d813044be95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.122.2.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083a33d813044be95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742364540768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PRIVATE-APP-AZ1a",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PRIVATE-APP-AZ1a",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "vpc_id": "vpc-07eecf7196212e4c7"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:subnet/subnet-03867b9a03e0a4bc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.122.4.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03867b9a03e0a4bc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742364540768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PRIVATE-APP-AZ1b",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "SBNT-VPC-DADOS-PRIVATE-APP-AZ1b",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "vpc_id": "vpc-07eecf7196212e4c7"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742364540768:vpc/vpc-07eecf7196212e4c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.122.0.0/16",
            "default_network_acl_id": "acl-0d06a4f7e74c0e638",
            "default_route_table_id": "rtb-019343be13f385eaf",
            "default_security_group_id": "sg-09857f5cc4eef9964",
            "dhcp_options_id": "dopt-70562e0a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07eecf7196212e4c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019343be13f385eaf",
            "owner_id": "742364540768",
            "tags": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "VPC-DADOS",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            },
            "tags_all": {
              "CreatedAt": "2024-05-07",
              "ManagedBy": "Terraform",
              "Name": "VPC-DADOS",
              "Owner": "Wesley Leite",
              "Project": "VPC FOLHA DIGITAL STAGING",
              "Service": "Network"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}